# astrbot_plugin_sams

./: .gitignore  AGENTS.md  PLAN.md  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  requirements.txt
scripts/: debug_plugin.py
services/: data_service.py  llm_service.py  ocr_service.py  parser_service.py
tests/: test_helpers.py  test_llm_service.py  test_parser.py
utils/: helpers.py
